Logo updated ando backgroundcolors changed

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,13 @@
 }
 
 .logo {
+  height: 150px;
   width: 150px;
+  /* Used to change the color of the font */
+  background-image: url(./assets/MikefitnesslogoTrasparente-modified.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
 }
 
 ul {
@@ -23,11 +29,13 @@ img {
   width: 100%;
   height: 100%;
   max-height: 50vh;
+  position: relative;
+  bottom: -4px;
 }
 
 h1 {
   font-size: 56px;
-  color: #f5002e;
+  color: #d2122e;
   margin-bottom: 24px;
   text-align: center;
 }
@@ -39,7 +47,7 @@ h2 {
 }
 
 .text__red {
-  color: #f5002e;
+  color: #d2122e;
 }
 
 button {
@@ -51,12 +59,16 @@ button:active {
 }
 
 .button {
-  background-color: #f5002e;
+  background-color: #d2122e;
   color: #fff;
   border: none;
   padding: 12px 24px;
   font-size: 20px;
   border-radius: 14px;
+}
+
+section:nth-child(odd) {
+  background-color: #f3f3f3;
 }
 
 /* Nav and header Section */
@@ -79,7 +91,7 @@ nav {
   padding: 16px;
   text-decoration: none;
   font-size: 20px;
-  color: #f5002e;
+  color: #d2122e;
   font-weight: bold;
 }
 
@@ -88,16 +100,12 @@ nav {
 }
 
 .nav__link--primary {
-  border: 2px solid #f5002e;
+  border: 2px solid #d2122e;
   border-radius: 14px;
 }
 
 .nav__link--primary:hover {
   text-decoration: none;
-}
-
-#home {
-  background-color: #c2c2c2;
 }
 
 header {
@@ -108,6 +116,10 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+#home {
+  background-color: #fff;
 }
 
 .header__description {
@@ -126,58 +138,56 @@ header {
 }
 
 .header__image--wrapper {
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 0px 20px;
 }
 
 /* Main */
 
-.container{
-    padding: 56px 0;
+.container {
+  padding: 56px 0;
 }
 
-.row{
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 /* highlights */
 
-.highlights__wrapper {
-    display: flex;
+.highlight__wrapper {
+  display: flex;
+  padding-bottom: 24px;
 }
 
-.highlight{
-    padding: 0 24px;
-    width: calc(100% / 3); 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.highlight {
+  padding: 0 24px;
+  width: calc(100% / 3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
-.highlight__img{
-    border: 2px solid #c2c2c2;
-    color: #f5002e;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 14px;
-    font-size: 32px;
-    margin-bottom: 24px;
+.highlight__img {
+  border: 2px solid #c2c2c2;
+  color: #d2122e;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 14px;
+  font-size: 32px;
+  margin-bottom: 24px;
 }
 
-.highlight__subtitle{
-    font-style: 24px;
-    margin-bottom: 24px;
+.highlight__subtitle {
+  font-style: 24px;
+  margin-bottom: 24px;
 }
 
-.highlight__para{
-    font-size: 18px;
+.highlight__para {
+  font-size: 18px;
 }
 /* highlights */
-
-
-
