--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .logo {
   height: 150px;
   width: 150px;
@@ -44,6 +48,10 @@ h2 {
   font-size: 30px;
   margin-bottom: 32px;
   text-align: center;
+}
+
+p {
+  line-height: 1.5;
 }
 
 .text__red {
@@ -139,6 +147,7 @@ header {
 
 .header__image--wrapper {
   padding: 20px 20px 0px 20px;
+  z-index: 2;
 }
 
 /* Main */
@@ -155,9 +164,41 @@ header {
 
 /* highlights */
 
+/* To add the wave efect to before
+
+#highlights::before {
+    background: url("./assets/wave.svg");
+    content: "";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+}
+
+To add the wave efect */
+
+#highlights::after {
+  background: url("./assets/wave.svg");
+  content: "";
+  position: absolute;
+  width: 101vw;
+  height: 12vw;
+  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transform: translateY(-99%);
+}
+
 .highlight__wrapper {
   display: flex;
   padding-bottom: 24px;
+}
+
+.section__title__highlights {
+  padding-top: 30px;
 }
 
 .highlight {
@@ -167,6 +208,8 @@ header {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  position: relative;
+  z-index: 2;
 }
 
 .highlight__img {
@@ -180,14 +223,33 @@ header {
   border-radius: 14px;
   font-size: 32px;
   margin-bottom: 24px;
+  margin-top: 24px;
 }
 
 .highlight__subtitle {
   font-style: 24px;
-  margin-bottom: 24px;
+  margin-bottom: 5px;
+  text-align: center;
 }
 
 .highlight__para {
   font-size: 18px;
+  margin-bottom: 5px;
+  text-align: center;
+  max-width: 280px;
 }
-/* highlights */
+
+/* bestseller */
+
+#bestseller::after {
+  background: url("./assets/wave.svg");
+  content: "";
+  position: absolute;
+  width: 101vw;
+  height: 12vw;
+  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transform: translateY(0%);
+  transform: rotate(180deg);
+}
